wallet universal fix
